[gd_scene load_steps=10 format=3 uid="uid://xrf3ogc35vwv"]

[ext_resource type="Script" uid="uid://cdsusjhd86rxc" path="res://scripts/slime.gd" id="1_n6pvg"]
[ext_resource type="Texture2D" uid="uid://chb5lkp5qg2kx" path="res://assets/sprites/slime_purple.png" id="1_p2gj0"]
[ext_resource type="PackedScene" uid="uid://bpwwwmyvl8xl6" path="res://scenes/killzone.tscn" id="2_n6pvg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_p2gj0")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_p2gj0")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_p2gj0")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_p2gj0")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_md484"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ipns3"]
size = Vector2(14, 12)

[node name="Slime" type="CharacterBody2D"]
collision_mask = 5
script = ExtResource("1_n6pvg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_md484")
autoplay = "default"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_ipns3")

[node name="Killzone" parent="." instance=ExtResource("2_n6pvg")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 6)
scale = Vector2(1.25, 1.25)
shape = SubResource("RectangleShape2D_ipns3")
debug_color = Color(0.66580325, 0.20000204, 0.2234528, 0.41960785)

[node name="RayCastDown" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 6)
target_position = Vector2(0, 6)

[node name="RayCastUp" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 6)
target_position = Vector2(0, -6)

[node name="RayCastLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 6)
target_position = Vector2(-8, 0)
collision_mask = 5

[node name="RayCastRight" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, 6)
target_position = Vector2(8, 0)
collision_mask = 5
